force-app/main/default/objects/simpli_lv__List_View_Config_Parameter__c/simpli_lv__List_View_Config_Parameter__c.object-meta.xml
<CustomObject>
    <label>List View Config Parameter</label>
    <nameField>
        <displayFormat>LVCP-{0}</displayFormat>
        <label>List View Config Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List View Config Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>