force-app/main/default/objects/simpli_lv__List_View_Config_Parameter__c/fields/simpli_lv__List_View_Config__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__List_View_Config__c</fullName>
    <description>The list view config that this parameter is asociated with.</description>
    <inlineHelpText>The list view config that this parameter is asociated with.</inlineHelpText>
    <label>List View Config</label>
    <referenceTo>simpli_lv__List_View_Config__c</referenceTo>
    <relationshipLabel>List View Config Parameters</relationshipLabel>
    <relationshipName>List_View_Config_Parameters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>