force-app/main/default/objects/simpli_lv__List_View_Config_Parameter__c/fields/simpli_lv__Parameter_Label__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Parameter_Label__c</fullName>
    <label>Parameter Label</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>