force-app/main/default/objects/simpli_lv__List_View_Config_Parameter__c/fields/simpli_lv__Parameter_Name__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Parameter_Name__c</fullName>
    <description>The unique name of the parameter for this config.</description>
    <inlineHelpText>The unique name of the parameter for this config.</inlineHelpText>
    <label>Parameter Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>