force-app/main/default/objects/simpli_lv__List_View_Config_Parameter__c/fields/simpli_lv__Parameter_Type__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Parameter_Type__c</fullName>
    <defaultValue>&quot;String&quot;</defaultValue>
    <description>Indicates the type that the parameter should take.</description>
    <inlineHelpText>Indicates the type that the parameter should take.</inlineHelpText>
    <label>Parameter Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>boolean</fullName>
            </value>
            <value>
                <fullName>color</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>datetime</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>string</fullName>
                <default>true</default>
                <label>string</label>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>