force-app/main/default/objects/simpli_lv__List_View_Config_Parameter__c/fields/simpli_lv__Parameter_Value__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Parameter_Value__c</fullName>
    <description>The value of the parameter.</description>
    <inlineHelpText>The value of the parameter.</inlineHelpText>
    <label>Parameter Value</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>