force-app/main/default/objects/simpli_lv__List_View_Config_Parameter__c/listViews/simpli_lv__All.listView-meta.xml
<ListView>
    <fullName>simpli_lv__All</fullName>
    <columns>NAME</columns>
    <columns>simpli_lv__Parameter_Label__c</columns>
    <columns>simpli_lv__Parameter_Name__c</columns>
    <columns>simpli_lv__Parameter_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>simpli_lv__Parameter_Value__c</columns>
    <columns>simpli_lv__List_View_Config__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>