force-app/main/default/objects/simpli_lv__List_View_Config_Parameter__c/listViews/simpli_lv__All_All.listView-meta.xml
<ListView>
    <fullName>simpli_lv__All_All</fullName>
    <columns>NAME</columns>
    <columns>simpli_lv__Parameter_Name__c</columns>
    <columns>simpli_lv__Parameter_Label__c</columns>
    <columns>simpli_lv__Parameter_Type__c</columns>
    <columns>simpli_lv__List_View_Config__c</columns>
    <columns>simpli_lv__Parameter_Value__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>simpli_lv__List_View_Config__c</field>
        <operation>equals</operation>
        <value>All</value>
    </filters>
    <label>All:All</label>
</ListView>